[package]
name = "sokol-fetch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# toxoid_sokol = { git= "https://github.com/toxoidengine/toxoid.git", default-features = false, features = ["fetch"]}
# toxoid_ffi = { git= "https://github.com/toxoidengine/toxoid.git", default-features = false }
toxoid_sokol = { path = "./toxoid/crates/toxoid_sokol", default-features = false, features = ["fetch"]}
toxoid_ffi = { path = "./toxoid/crates/toxoid_ffi", default-features = false }